--- a/Symfony/app/config/security.yml
+++ b/Symfony/app/config/security.yml
@@ -23,7 +23,7 @@ security:
             security: false
 
         secured_area:
-            pattern:    ^/demo/secured/
+            pattern:    ^/admin/
             form_login:
                 check_path: _security_check
                 login_path: _demo_login
@@ -35,5 +35,5 @@ security:
             #    realm: "Secured Demo Area"
 
     access_control:
-        - { path: ^/demo/secured/hello/admin/, roles: ROLE_ADMIN }
+        - { path: ^/admin/settings/, roles: ROLE_ADMIN }
         #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
