--- a/Symfony/src/Stc/ScraperBundle/Resources/config/routing.yml
+++ b/Symfony/src/Stc/ScraperBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 stc_scraper_homepage:
     pattern:  /
     defaults: { _controller: StcScraperBundle:Default:index }
+
+stc_admin:
+    pattern: /admin
+    defaults: { _controller: StcScraperBundle:Admin:index }
