Added main entities config files & generated the corresponding classes via doctrine command line.
There is a test in the CoreController.php in the indexAction() method that will scrape a page, parse the results and insert the data into the database (in the status table).

Also generated a sample CRUD controller for 2 tables : status & content.

@todo : make these CRUD controllers models (new namespace?)

--- a/Symfony/app/config/parameters.yml
+++ b/Symfony/app/config/parameters.yml
@@ -1,11 +1,11 @@
 # This file is auto-generated during the composer install
 parameters:
     database_driver: pdo_mysql
-    database_host: 127.0.0.1
-    database_port: null
-    database_name: symfony
+    database_host: localhost
+    database_port: 3306
+    database_name: scrapetaculous
     database_user: root
-    database_password: null
+    database_password: yeahyeah
     mailer_transport: smtp
     mailer_host: 127.0.0.1
     mailer_user: null
