--- a/Symfony/src/Stc/ScraperBundle/Resources/config/routing/routing.yml
+++ b/Symfony/src/Stc/ScraperBundle/Resources/config/routing/routing.yml
@@ -1,9 +1,13 @@
+stc_scraper:
+    resource: "@StcScraperBundle/Resources/config/routing/scrapecontent.yml"
+    prefix: /stc_scraper
+
 stc_scraper_homepage:
     pattern:  /scraper
     defaults: { _controller: StcScraperBundle:Default:index }
 
 index:
-    pattern: /index
+    pattern: /
     defaults: { _controller: StcScraperBundle:Core:index }
 
 stc_scraper_theme:
