--- a/.gitignore
+++ b/.gitignore
@@ -223,3 +223,7 @@ logs
 /Symfony/app/cache/dev_old/profiler/index.csv
 /Symfony/app/cache/dev_old/sessions/sess_u10f7rl8p9947vnrbk6uo0sm45
 /Symfony/app/cache/dev_old/templates.php
+.idea
+cache
+logs
+/Symfony/composer.phar
