--- a/Symfony/src/Stc/ScraperBundle/Resources/config/routing/routing.yml
+++ b/Symfony/src/Stc/ScraperBundle/Resources/config/routing/routing.yml
@@ -13,3 +13,7 @@ index:
 stc_scraper_theme:
     pattern: /scraper/theme
     defaults: { _controller: StcScraperBundle:Default:theme }
+
+stc_admin:
+    pattern: /admin
+    defaults: { _controller: StcScraperBundle:Admin:index }
