Added fixture to vendors & created 1st data fixture : LoadFeedsData.php (for feeds table).
Added eko/feedbundle to vendors.

Made some modifications to the admin layout & performed a small test in the AdminController on the data data models. Moved the old Controller/ScrapeContentController.php and Controller/ScrapeStatusController.php files & replaced them with 2 respective module classes inside a new namespace : Stc\ScraperBundle\Model.

Created new "feeds" table schema & updated database.

Created new service definition (services.yml) for the status model.
Created new service def. (config.yml) for the new feed bundle.

**Note** The commented out code in the CoreController.php is a test to check the compatibility of the new models and the Components\Lib*.php files.

@todo : Add a "Lib" folder (namespace) under the Components directory & put the Lib*.php files in it.

--- a/Symfony/app/config/config.yml
+++ b/Symfony/app/config/config.yml
@@ -63,3 +63,12 @@ swiftmailer:
     username:  %mailer_user%
     password:  %mailer_password%
     spool:     { type: memory }
+
+eko_feed:
+    feeds:
+        article:
+            title:       'My articles/posts'
+            description: 'Latest Articles'
+            link:        'http://wenigoe.com'
+            encoding:    'utf-8'
+            author:      'Jesse Griffin'
