--- a/Symfony/src/Stc/ScraperBundle/Resources/config/doctrine/Feeds.orm.yml
+++ b/Symfony/src/Stc/ScraperBundle/Resources/config/doctrine/Feeds.orm.yml
@@ -6,6 +6,10 @@ Stc\ScraperBundle\Entity\Feeds:
             type: integer
             generator: { strategy: AUTO }
     fields:
+        name:
+            type: string
+            length: 50
+            unique: true
         url:
             type: string
             length: 100
@@ -21,5 +25,5 @@ Stc\ScraperBundle\Entity\Feeds:
         updated_at:
             type: datetime
     lifecycleCallbacks:
-        prePersist: [ setCreatedAtValue ]
+        prePersist: [ setCreatedAtValue, setUpdatedAtValue ]
         preUpdate:  [ setUpdatedAtValue ]
