Added the Goutte library and made some small adjustments

--- a/Symfony/composer.json
+++ b/Symfony/composer.json
@@ -21,7 +21,8 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "eko/feedbundle": "dev-master",
         "doctrine/doctrine-fixtures-bundle": "dev-master",
-        "doctrine/data-fixtures": "dev-master"
+        "doctrine/data-fixtures": "dev-master",
+        "fabpot/goutte": "*"
     },
     "scripts": {
         "post-install-cmd": [
