--- a/Symfony/src/Stc/ScraperBundle/Resources/config/services.yml
+++ b/Symfony/src/Stc/ScraperBundle/Resources/config/services.yml
@@ -13,6 +13,18 @@ services:
         class: Stc\ScraperBundle\Model\ScrapeStatusModel
         arguments:
             entityManager: "@doctrine.orm.entity_manager"
+    stc_scraper.model.content:
+        class: Stc\ScraperBundle\Model\ScrapeContentModel
+        arguments:
+            entityManager: "@doctrine.orm.entity_manager"
+    stc_scraper.model.feeds:
+        class: Stc\ScraperBundle\Model\FeedModel
+        arguments:
+            entityManager: "@doctrine.orm.entity_manager"
+    stc_scraper.logic.content:
+        class: Stc\ScraperBundle\Logic\ScrapeContentLogic
+        arguments:
+            model: "@stc_scraper.model.content"
     stc_scraper.http:
         class: %stc_scraper.http.class%
         arguments: ["http_class", %webbot_name%, %curl_timeout%, %cookie_file%]
